# world-data

./: .gitignore  Cargo.toml  Makefile  README.md
data/: all_countries.json  countries_extra.json
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
types/: Cargo.toml
types/src/: data.rs
types/src/data/: capital.rs  country.rs
