[package]
name = "world-data"
description = "Bundled country shapes, capital city positions and more."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Zitronenjoghurt/world-data"
include = [
    "src/*",
    "data.bin"
]

[dependencies]
bincode = "1.3.3"
flate2 = "1.1.1"
world-data-types = { version = "0.1.0" }